--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,59 @@
-.App {
-  text-align: center;
+body, html {
+    background-color: #f1f1f1;
+   font-family: "Helvetica Neue","HelveticaNeue-Light", "Helvetica Neue Light",  Helvetica, Arial, "Lucida Grande", sans-serif; 
+   font-weight: 500;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
+.centre-hero {
+    height: 60%;
+      position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+    display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    padding-left: 40px;
 }
 
-.App-link {
-  color: #61dafb;
+.landing {
+    width: 100vw;
+    height: 100vh
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.impact {
+    font-size: 40px;
+    font-weight: 400;
+    color: #1a283d
 }
+
+.subtitle {
+    font-size: 18px;
+    margin-top: 10px;
+    color: #434d5f
+}
+
+.yellow-highlight {
+  text-shadow: 
+    -3px 0px 3px #eaedad,
+     3px 0px 3px #eaedad,
+     6px 0px 6px #eaedad,
+    -6px 0px 6px #eaedad;
+}
+
+.contact-tray {
+    margin-top: 40px;
+    font-size: 20px;
+}
+
+.contact-icon {
+    margin-right: 20px;
+    color: #595959;
+    transition: color 1s;
+}
+
+.contact-icon:hover {
+    color: #212121;
+    cursor: pointer;
+}
+
