--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@ body, html {
   flex-direction: column;
   justify-content: center;
     padding-left: 40px;
+    padding-right: 40px;
 }
 
 .landing {
