--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
   padding: 0;
@@ -9,8 +13,14 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+  border-color: #e2ed0e;
+  @apply border-b transition-all hover:bg-gray-100;
 }
 
 * {
   box-sizing: border-box;
+}
+
+.code {
+    font-family: monospace;
 }
